--- a/WebDemo2/Views/Shared/Layout.cshtml
+++ b/WebDemo2/Views/Shared/Layout.cshtml
@@ -115,6 +115,8 @@
                                     <li><a class=" @Html.Raw(ViewBag.active == 1 ? "active" : "") " href="~/">Home</a></li>
                                     <li><a class=" @Html.Raw(ViewBag.active == 2 ? "active" : "") " href="~/KhachHang/DanhSach">Khách Hàng</a></li>
                                     <li><a class=" @Html.Raw(ViewBag.active == 3 ? "active" : "") " href="~/DonHang/DanhSach">Đơn Hàng</a></li>
+                                    <li><a class=" @Html.Raw(ViewBag.active == 4 ? "active" : "") " href="~/BaiVietMoTa/Index">Mô Tả</a></li>
+                                    <li><a class=" @Html.Raw(ViewBag.active == 5 ? "active" : "") " href="~/LoaiBaiViet/DanhSach">Loại Bài Viết</a></li>
 
                                     <li class="d_none"><a href="Javascript:void(0)"><i class="fa fa-user" aria-hidden="true"></i></a></li>
                                     <li class="d_none"><a href="Javascript:void(0)"><i class="fa fa-search" aria-hidden="true"></i></a></li>
